[package]
name = "chm_setting_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.1"
console = "0.15.8"
cliclack = "0.2.5"
nix = { version = "0.29.0", features = ["hostname"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
aes = "0.8.4"
cipher = "0.4.4"
hex = "0.4.3"
block-padding = "0.3.3"
generic-array = "1.0.0"
dotenv = "0.15.0"
